--- a/TestsProject/Views/Home/Index.cshtml
+++ b/TestsProject/Views/Home/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
+
 	ViewBag.Title = "Home Page";
 }
 <div class="jumbotron">
 	<h1>Welcome to TESTS</h1>
 	<p>The Exceptional Student Testing System</p>
-	<p>This is a demo, use the accounts teacher, jano, fero, zuza, student for testing. You can create new accounts, but there is currently no way to give them teacher permissions. The password for all accounts is "Heslo6!"</p>
+	<div class="alert-danger">This is a demo. Use the accounts teacher, jano, fero, zuza, student for testing. You can create new accounts, but there is currently no way to give them teacher permissions. The password for all accounts is "Heslo6!"</div>
 </div>
 <div class="row">
 	<div class="col-md-6">
